--- a/styles.css
+++ b/styles.css
@@ -22,30 +22,45 @@ img {
 .box1 {
   margin: auto;
   transform: translate(0, 27%);
-  width: 390px;
-  height: 620px;
+  width: 370px;
+  height: 600px;
   padding: 10px;
   border-radius: 25px;
   background-color: hsl(0,0%,100%);
+}
+
+.box2 {
+  height: 30px;
+}
+
+.box3
+{
+  margin: auto;
+  width: 310px;
+  height: 70px;
+}
+
+.box4
+{
+  margin: auto;
+  width: 310px;
+  height: 110px;
 }
 
 .text1 {
   color: hsl(218, 44%, 22%);
   font-family: 'Outfit', sans-serif;
   font-weight: 700;
-  font-size: 30px;
+  font-size: 26px;
   overflow: scroll;
   text-align: center;
-  transform: translate(0, 40%);
 }
 
 .text2 {
   color: hsl(220, 15%, 55%);
   font-family: 'Outfit', sans-serif;
   font-weight: 400;
-  font-size: 23px;
-text-indent: 15%;
+  font-size: 19px;
   overflow: scroll;
   text-align: center;
-  transform: translate(0, 15%);
 }
